--- a/app/server/views/application/menu.html
+++ b/app/server/views/application/menu.html
@@ -72,7 +72,7 @@
                         <span>角色列表</span>
                         <i class="fa fa fa-smile-o"></i>
                     </a>
-                    <a class="box box5" href="/admin/role/addUser">
+                    <a class="box box5" href="/admin/role/addRole">
                         <span>新建角色</span>
                         <i class="fa fa-plus"></i>
                     </a>
