--- a/app/server/views/admin/log-login.html
+++ b/app/server/views/admin/log-login.html
@@ -142,7 +142,7 @@
                 <% include ../includes/ace-settings-container.html %>
 
                 <div class="page-header">
-                    <h1>操作日志 - 登录日志 </h1>
+                    <h1>日志管理 - 登录日志 </h1>
                 </div><!-- /.page-header -->
 
                 <div class="row">
@@ -226,7 +226,8 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">删除用户</h4>
             </div>
             <div class="modal-body">是否要删除该用户？</div>
@@ -357,7 +358,7 @@
         jQuery(grid_selector).jqGrid({
             datatype: "local",
             height: 500,
-            colNames: ['_id', '日志类型', '用户名', '用户角色', '登录时间', '操作', '用户IP', 'PC名称' ,'浏览器'],
+            colNames: ['_id', '日志类型', '用户名', '用户角色', '登录时间', '操作', '用户IP', '浏览器名称', '浏览器版本', '浏览器内核', '操作系统'],
             colModel: [
                 {
                     name: '_id',
@@ -379,19 +380,21 @@
                     editoptions: {minlength: 8, maxlength: 16}
                 },
                 {name: 'user', index: '用户名', width: 120, editable: true, sorttype: "text"},
-                {name: 'role', index: '用户角色', width: 80, editable: false, sorttype: "text"},
+                {name: 'role', index: '用户角色', width: 80, editable: false, sorttype: "text", formatter: highlight},
                 {
-                    name: 'time',
+                    name: 'date',
                     index: '登录时间',
-                    width: 80,
+                    width: 150,
                     datefmt: "MMMM Do YYYY, h:mm:ss a",
                     editable: false,
                     sorttype: "date"
                 },
-                {name: 'result.msg', index: '操作', width: 120, editable: true, sorttype: "text"},
-                {name: 'IP', index: '用户IP', width: 120, editable: true, sorttype: "text"},
-                {name: 'hostname', index: 'PC名称', width: 120, editable: true, sorttype: "text"},
-                {name: 'ua', index: '浏览器', width: 120, editable: true, sorttype: "text"},
+                {name: 'result.msg', index: '操作', width: 100, editable: true, sorttype: "text"},
+                {name: 'IP', index: '用户IP', width: 100, editable: true, sorttype: "text"},
+                {name: 'ua.browser.name', index: '浏览器名称', width: 100, editable: true, sorttype: "text"},
+                {name: 'ua.browser.version', index: '浏览器版本', width: 100, editable: true, sorttype: "text"},
+                {name: 'ua.engine.name', index: '浏览器内核', width: 100, editable: true, sorttype: "text"},
+                {name: 'ua.os.name', index: '操作系统', width: 100, editable: true, sorttype: "text"}
             ],
 
             viewrecords: true,
@@ -452,13 +455,10 @@
                 type: "POST",
                 success: function (result) {
 
-                    for(var i=0;i<result.length;i++) {
+                    for (var i = 0; i < result.length; i++) {
                         result[i] = eval('(' + result[i] + ')')
                     }
-
-
-
-                    console.log(result)
+                    result.reverse();
                     // set the new data
                     $("#grid-table").jqGrid('setGridParam', {data: result});
                     // hide the show message
@@ -717,7 +717,7 @@
 
         //延时执行， 等待Dom先生成
         setTimeout(function () {
-            $(".J_del").on("click",J_del);
+            $(".J_del").on("click", J_del);
         }, 20);
 
         function J_del(event) {
@@ -726,14 +726,14 @@
 
             $('#formInfoBox').modal();
 
-            $("#btnDel").on("click", function() {
+            $("#btnDel").on("click", function () {
                 //点击确认按钮开始删除用户
                 WhetherToDelete = true;
                 $('#formInfoBox').modal('hide')
             });
             $('#formInfoBox').on('hidden.bs.modal', function (e) {
                 //确认删除
-                if(WhetherToDelete) {
+                if (WhetherToDelete) {
                     $.ajax({
                         //提交数据的类型 POST GET
                         type: "POST",
@@ -760,13 +760,13 @@
                                 id: "Only-one-message"
                             });
                         },
-                        complete: function(e) {
+                        complete: function (e) {
                             //先清除， 再重新加载数据！
                             $("#grid-table").jqGrid("clearGridData");
                             fetchGridData();
-                            setTimeout(function(){
-                                $(".J_del").on("click",J_del);
-                            },20)
+                            setTimeout(function () {
+                                $(".J_del").on("click", J_del);
+                            }, 20)
                         },
                         //调用出错执行的函数
                         error: function (e) {
