--- a/app/server/views/error-unauthorized.html
+++ b/app/server/views/error-unauthorized.html
@@ -31,7 +31,6 @@
 		<![endif]-->
 
 		<!-- inline styles related to this page -->
-		<link rel="stylesheet" href="/stylesheets/customs/pages/index.css" />
 
 		<!-- ace settings handler -->
 		<script src="/javascripts/Ace_template_js/ace-extra.min.js"></script>
@@ -158,38 +157,7 @@
 										</h1>
 
 										<hr />
-										<h3 class="lighter smaller">您所访问的页面需要更高的账号权限，您的账号权限不足，请联系系统管理员！</h3>
-
-										<div>
-											<form class="form-search">
-												<span class="input-icon align-middle">
-													<i class="ace-icon fa fa-search"></i>
-
-													<input type="text" class="search-query" placeholder="搜索一下..." />
-												</span>
-												<button class="btn btn-sm" type="button">Go!</button>
-											</form>
-
-											<div class="space"></div>
-											<h4 class="smaller">您可以尝试以下方法：</h4>
-
-											<ul class="list-unstyled spaced inline bigger-110 margin-15">
-												<li>
-													<i class="ace-icon fa fa-hand-o-right blue"></i>
-													检查url路径是否正确
-												</li>
-
-												<li>
-													<i class="ace-icon fa fa-hand-o-right blue"></i>
-													阅读帮助文件
-												</li>
-
-												<li>
-													<i class="ace-icon fa fa-hand-o-right blue"></i>
-													联系我们
-												</li>
-											</ul>
-										</div>
+										<h3 class="lighter smaller">您所访问的页面需要更高的账号权限，您的账号权限不足，请联系管理员！</h3>
 
 										<hr />
 										<div class="space"></div>
@@ -200,14 +168,13 @@
 												返回上页
 											</a>
 
-											<a href="#" class="btn btn-primary">
+											<a href="/menu" class="btn btn-primary">
 												<i class="ace-icon fa fa-tachometer"></i>
-												浏览主页
+												浏览导航页
 											</a>
 										</div>
 									</div>
 								</div>
-
 								<!-- PAGE CONTENT ENDS -->
 							</div><!-- /.col -->
 						</div><!-- /.row -->
