登录日志采用直接写入mongodb的方式;
Signed-off-by: liu wei <15895891210@sina.cn>

--- a/app/server/views/admin/index.html
+++ b/app/server/views/admin/index.html
@@ -186,8 +186,8 @@
                             <div class="col-md-3 col-sm-6"><a href="/admin/user/">
                                 <div class="dashboard-tile detail tile-turquoise">
                                     <div class="content">
-                                        <h1 data-from="0" data-to="56" data-speed="2500" class="text-left timer">1</h1>
-                                        <p>用户</p>
+                                        <h1 data-from="0" data-to="56" data-speed="2500" class="text-left timer"><%= dashboardInfo.userNum %></h1>
+                                        <p>用户总数</p>
                                     </div>
                                     <div class="icon"><i class="fa fa-users"></i></div>
                                 </div>
@@ -196,28 +196,28 @@
                             <div class="col-md-3 col-sm-6"><a href="/admin/role/">
                                 <div class="dashboard-tile detail tile-blue">
                                     <div class="content">
-                                        <h1 data-from="0" data-to="32" data-speed="2500" class="text-left timer">0</h1>
-                                        <p>角色</p>
+                                        <h1 data-from="0" data-to="32" data-speed="2500" class="text-left timer"><%= dashboardInfo.roleNum %></h1>
+                                        <p>角色总数</p>
                                     </div>
                                     <div class="icon"><i class="fa fa fa-key"></i></div>
                                 </div>
                             </a></div>
 
-                            <div class="col-md-3 col-sm-6"><a href="/admin/log/">
+                            <div class="col-md-3 col-sm-6"><a href="/admin/log/login/">
                                 <div class="dashboard-tile detail tile-red">
                                     <div class="content">
-                                        <h1 data-from="0" data-to="180" data-speed="2500" class="text-left timer">0</h1>
-                                        <p>日志</p>
+                                        <h1 data-from="0" data-to="180" data-speed="2500" class="text-left timer"><%= dashboardInfo.logNum %></h1>
+                                        <p>日志总数</p>
                                     </div>
                                     <div class="icon"><i class="fa fa-file"></i></div>
                                 </div>
                             </a></div>
 
-                            <div class="col-md-3 col-sm-6"><a href="/admin/setting/">
+                            <div class="col-md-3 col-sm-6"><a href="#">
                                 <div class="dashboard-tile detail tile-purple">
                                     <div class="content">
-                                        <h1 data-to="105" data-speed="2500" class="text-left timer">1</h1>
-                                        <p>配置</p>
+                                        <h1 data-to="105" data-speed="2500" class="text-left timer">NAN</h1>
+                                        <p>暂未开发</p>
                                     </div>
                                     <div class="icon"><i class="fa fa-file"></i></div>
                                 </div>
