--- a/app/server/views/application/menu.html
+++ b/app/server/views/application/menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -56,14 +56,14 @@
                         <span>监控主页</span>
                         <i class="fa fa-video-camera"></i>
                     </a>
-                    <a class="box box2" href="/user/map">
-                        <span>地图主页</span>
+                    <a class="box box2 btn" href="#" disabled="disabled">
+                        <span>地图主页（尚未开放）</span>
                         <i class="fa fa-map"></i>
                     </a>
                 </div>
                 <div class="col-sm-6">
-                    <a class="box box3 height2">
-                        <span>照片</span>
+                    <a class="box box3 height2 btn" href="#" disabled="disabled">
+                        <span>照片（尚未开放）</span>
                         <i></i>
                     </a>
                 </div>
@@ -80,12 +80,12 @@
             </div>
             <div class="row">
                 <div class="col-sm-3">
-                    <a class="box box6" href="/user/alert">
-                        <span>报警主页</span>
+                    <a class="box box6 btn" href="#" disabled="disabled">
+                        <span>报警主页（尚未开放）</span>
                         <i class="fa fa-warning"></i>
                     </a>
-                    <a class="box box10" href="#">
-                        <span>统计页面（尚未开放）</span>
+                    <a class="box box10" href="/user/audioTest">
+                        <span>音频测试</span>
                         <i class="fa fa-area-chart"></i>
                     </a>
                 </div>
