--- a/app/server/views/admin/index.html
+++ b/app/server/views/admin/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -113,7 +113,7 @@
 
             <li class="hover">
                 <a href="/admin/role">
-                    <i class="menu-icon fa fa-tag"></i>
+                    <i class="menu-icon fa fa-unlock-alt"></i>
 
 
                     <span class="menu-text"> 角色管理 </span>
