--- a/app/server/views/admin/log-login.html
+++ b/app/server/views/admin/log-login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -117,7 +117,7 @@
 
             <li class="hover">
                 <a href="/admin/role">
-                    <i class="menu-icon fa fa-tag"></i>
+                    <i class="menu-icon fa fa-unlock-alt"></i>
 
 
                     <span class="menu-text"> 角色管理 </span>
@@ -160,7 +160,7 @@
 
                                     <li class="open">
                                         <a href="#" class="dropdown-toggle">
-                                            <i class="menu-icon fa fa-unlock-alt"></i>
+                                            <i class="menu-icon fa fa-file-text-o"></i>
                                                 <span class="menu-text">
                                                     日志管理
                                                 </span>
@@ -356,8 +356,10 @@
 
 
         jQuery(grid_selector).jqGrid({
-            datatype: "local",
+            datatype: "json",
+            url: "/admin/log/login/getAllRecords",
             height: 500,
+            mtype: 'POST',
             colNames: ['_id', '日志类型', '用户名', '用户角色', '登录时间', '操作', '用户IP', '浏览器名称', '浏览器版本', '浏览器内核', '操作系统'],
             colModel: [
                 {
@@ -371,40 +373,43 @@
                     key: true
                 },
                 {
-                    name: 'type',
-                    index: '日志类型',
+                    name: 'name',
+                    index: 'name',
                     width: 60,
                     editable: true,
                     sorttype: "text",
                     editrules: {edithidden: true, required: true, email: true},
                     editoptions: {minlength: 8, maxlength: 16}
                 },
-                {name: 'user', index: '用户名', width: 120, editable: true, sorttype: "text"},
-                {name: 'role', index: '用户角色', width: 80, editable: false, sorttype: "text", formatter: highlight},
+                {name: 'user', index: 'user', width: 120, editable: true},
+                {name: 'role', index: 'role', width: 80, editable: false, formatter: highlight},
                 {
                     name: 'date',
-                    index: '登录时间',
+                    index: 'date',
                     width: 150,
                     datefmt: "MMMM Do YYYY, h:mm:ss a",
                     editable: false,
                     sorttype: "date"
                 },
-                {name: 'result.msg', index: '操作', width: 100, editable: true, sorttype: "text"},
-                {name: 'IP', index: '用户IP', width: 100, editable: true, sorttype: "text"},
-                {name: 'ua.browser.name', index: '浏览器名称', width: 100, editable: true, sorttype: "text"},
-                {name: 'ua.browser.version', index: '浏览器版本', width: 100, editable: true, sorttype: "text"},
-                {name: 'ua.engine.name', index: '浏览器内核', width: 100, editable: true, sorttype: "text"},
-                {name: 'ua.os.name', index: '操作系统', width: 100, editable: true, sorttype: "text"}
+                {name: 'result.msg', index: 'result.msg', width: 100, editable: true},
+                {name: 'IP', index: 'IP', width: 100, editable: true},
+                {name: 'ua.browser.name', index: 'ua.browser.name', width: 100, editable: true},
+                {name: 'ua.browser.version', index: 'ua.browser.version', width: 100, editable: true},
+                {name: 'ua.engine.name', index: 'ua.engine.name', width: 100, editable: true},
+                {name: 'ua.os.name', index: 'ua.os.name', width: 100, editable: true}
             ],
 
             viewrecords: true,
             rowNum: 20,
-            rowList: [10, 20, 30],
+            rowList: [20, 50, 100],
             pager: pager_selector,
+            emptyrecords: "Nothing to display",
+            sortname : 'date',
+            sortorder: 'desc',
             altRows: true,
             //toppager: true,
 
-            multiselect: true,
+            multiselect: false,
             //multikey: "ctrlKey",
             multiboxonly: true,
 
@@ -412,14 +417,13 @@
                 var table = this;
                 setTimeout(function () {
                     styleCheckbox(table);
-
                     updateActionIcons(table);
                     updatePagerIcons(table);
                     enableTooltips(table);
                 }, 0);
             },
 
-            editurl: "/admin/role/updateRole",
+            editurl: "",
             caption: "",
             reloadAfterSubmit: true,
             checkOnSubmit: true
@@ -441,28 +445,6 @@
 
         });
         $(window).triggerHandler('resize.jqGrid');//trigger window resize to make the grid get the correct size
-
-
-        fetchGridData();
-
-        function fetchGridData() {
-
-            var gridArrayData = [];
-            // show loading message
-            $("#grid-table")[0].grid.beginReq();
-            $.ajax({
-                url: "/admin/log/login/getAllRecords",
-                type: "POST",
-                success: function (result) {
-                    // set the new data
-                    $("#grid-table").jqGrid('setGridParam', {data: result});
-                    // hide the show message
-                    $("#grid-table")[0].grid.endReq();
-                    // refresh the grid
-                    $("#grid-table").trigger('reloadGrid');
-                }
-            });
-        }
 
 
         //enable search/filter toolbar
