--- a/app/server/views/admin/log-operation.html
+++ b/app/server/views/admin/log-operation.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -117,7 +117,7 @@
 
             <li class="hover">
                 <a href="/admin/role">
-                    <i class="menu-icon fa fa-tag"></i>
+                    <i class="menu-icon fa fa-unlock-alt"></i>
 
 
                     <span class="menu-text"> 角色管理 </span>
@@ -287,7 +287,6 @@
         $('#sidebar2[data-sidebar-scroll=true]').ace_sidebar_scroll('reset', true);
     })
 </script>
-
 <script type="text/javascript">
     var grid_data = [];
 
@@ -356,27 +355,56 @@
 
 
         jQuery(grid_selector).jqGrid({
-            datatype: "local",
+            datatype: "json",
+            url: "/admin/log/operation/getAllRecords",
             height: 500,
-            colNames: ['_id', '日志类型', '用户名', '用户角色', '操作时间', '用户IP','操作详情'],
+            mtype: 'POST',
+            colNames: ['_id', '日志类型', '用户名', '用户角色', '登录时间','用户IP',  '操作'],
             colModel: [
-                {name: '_id', index: '_id', width: 80, sorttype: "text", hidden: true, editable: false, editrules: {edithidden: true},key: true},
-                {name: 'type', index: '日志类型', width: 20, editable: true, sorttype: "text", editrules: {edithidden: true, required: true, email: true}, editoptions: {minlength: 8, maxlength: 16}},
-                {name: 'user', index: '用户名', width: 40, editable: true, sorttype: "text"},
-                {name: 'role', index: '用户角色', width: 20, editable: false, sorttype: "text", formatter: highlight},
-                {name: 'date', index: '操作时间', width: 40, datefmt: "MMMM Do YYYY, h:mm:ss a", editable: false, sorttype: "date"},
-                {name: 'IP', index: '用户IP', width: 40, editable: true, sorttype: "text"},
-                {name: 'result.msg', index: '操作详情', width: 100, editable: true, sorttype: "text"}
+                {
+                    name: '_id',
+                    index: '_id',
+                    width: 40,
+                    sorttype: "text",
+                    hidden: true,
+                    editable: false,
+                    editrules: {edithidden: true},
+                    key: true
+                },
+                {
+                    name: 'name',
+                    index: 'name',
+                    width: 18,
+                    editable: true,
+                    sorttype: "text",
+                    editrules: {edithidden: true, required: true, email: true},
+                    editoptions: {minlength: 8, maxlength: 16}
+                },
+                {name: 'user', index: 'user', width: 40, editable: true},
+                {name: 'role', index: 'role', width: 25, editable: false, formatter: highlight},
+                {
+                    name: 'date',
+                    index: 'date',
+                    width: 40,
+                    datefmt: "MMMM Do YYYY, h:mm:ss a",
+                    editable: false,
+                    sorttype: "date"
+                },
+                {name: 'IP', index: 'IP', width: 40, editable: true},
+                {name: 'result.msg', index: 'result.msg', width: 100, editable: true}
             ],
 
             viewrecords: true,
             rowNum: 20,
-            rowList: [10, 20, 30],
+            rowList: [20, 50, 100],
             pager: pager_selector,
+            emptyrecords: "Nothing to display",
+            sortname : 'date',
+            sortorder: 'desc',
             altRows: true,
             //toppager: true,
 
-            multiselect: true,
+            multiselect: false,
             //multikey: "ctrlKey",
             multiboxonly: true,
 
@@ -384,14 +412,13 @@
                 var table = this;
                 setTimeout(function () {
                     styleCheckbox(table);
-
                     updateActionIcons(table);
                     updatePagerIcons(table);
                     enableTooltips(table);
                 }, 0);
             },
 
-            editurl: "/admin/role/updateRole",
+            editurl: "",
             caption: "",
             reloadAfterSubmit: true,
             checkOnSubmit: true
@@ -413,28 +440,6 @@
 
         });
         $(window).triggerHandler('resize.jqGrid');//trigger window resize to make the grid get the correct size
-
-
-        fetchGridData();
-
-        function fetchGridData() {
-
-            var gridArrayData = [];
-            // show loading message
-            $("#grid-table")[0].grid.beginReq();
-            $.ajax({
-                url: "/admin/log/operation/getAllRecords",
-                type: "POST",
-                success: function (result) {
-                    // set the new data
-                    $("#grid-table").jqGrid('setGridParam', {data: result});
-                    // hide the show message
-                    $("#grid-table")[0].grid.endReq();
-                    // refresh the grid
-                    $("#grid-table").trigger('reloadGrid');
-                }
-            });
-        }
 
 
         //enable search/filter toolbar
