第一次提交
Signed-off-by: Liuxq <2701306asd@sina.cn>

--- a/app/public/stylesheets/customs/pages/index/index.css
+++ b/app/public/stylesheets/customs/pages/index/index.css
@@ -1,7 +1,6 @@
 /* *****************************- 顶部导航条a标签的默认效果  -******************************** */
 .navbar .navbar-nav>li>a {
     background: transparent;
-    color: rgba(247, 247 ,247, .75);
 }
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
@@ -19,9 +18,19 @@
 }
 /* *****************************- sidebar  -******************************** */
 #sidebar {
+    margin-top: 5px;
     z-index: 1025;
+    background: repeat-x #f7f7f7;
+    background-image: linear-gradient(to bottom,#FFF 0,#EEE 100%);
+    background-image: -webkit-linear-gradient(top,#FFF 0,#EEE 100%);
+    background-image: -o-linear-gradient(top,#FFF 0,#EEE 100%);
+    background-image: linear-gradient(to bottom,#FFF 0,#EEE 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffeeeeee', GradientType=0);
 }
-#ace-settings-container {z-index: 1000;}
+#ace-settings-container {
+    z-index: 1000;
+}
 /* *****************************- 音频面板  -******************************** */
 .widget-main .main-left{float: left;  width: 150px;}
 .widget-main .main-right{margin-left: 150px;/*==等于左边栏宽度==*/}
+/* *****************************- 顶部导航样式（仿hn）  -******************************** */
