--- a/app/server/views/admin/log-login.html
+++ b/app/server/views/admin/log-login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -117,7 +117,7 @@
 
             <li class="hover">
                 <a href="/admin/role">
-                    <i class="menu-icon fa fa-tag"></i>
+                    <i class="menu-icon fa fa-unlock-alt"></i>
 
 
                     <span class="menu-text"> 角色管理 </span>
@@ -142,7 +142,7 @@
                 <% include ../includes/ace-settings-container.html %>
 
                 <div class="page-header">
-                    <h1>操作日志 - 登录日志 </h1>
+                    <h1>日志管理 - 登录日志 </h1>
                 </div><!-- /.page-header -->
 
                 <div class="row">
@@ -160,7 +160,7 @@
 
                                     <li class="open">
                                         <a href="#" class="dropdown-toggle">
-                                            <i class="menu-icon fa fa-unlock-alt"></i>
+                                            <i class="menu-icon fa fa-file-text-o"></i>
                                                 <span class="menu-text">
                                                     日志管理
                                                 </span>
@@ -226,7 +226,8 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">删除用户</h4>
             </div>
             <div class="modal-body">是否要删除该用户？</div>
@@ -355,9 +356,11 @@
 
 
         jQuery(grid_selector).jqGrid({
-            datatype: "local",
+            datatype: "json",
+            url: "/admin/log/login/getAllRecords",
             height: 500,
-            colNames: ['_id', '日志类型', '用户名', '用户角色', '登录时间', '操作', '用户IP', 'PC名称' ,'浏览器'],
+            mtype: 'POST',
+            colNames: ['_id', '日志类型', '用户名', '用户角色', '登录时间', '操作', '用户IP', '浏览器名称', '浏览器版本', '浏览器内核', '操作系统'],
             colModel: [
                 {
                     name: '_id',
@@ -371,37 +374,42 @@
                 },
                 {
                     name: 'name',
-                    index: '日志类型',
+                    index: 'name',
                     width: 60,
                     editable: true,
                     sorttype: "text",
                     editrules: {edithidden: true, required: true, email: true},
                     editoptions: {minlength: 8, maxlength: 16}
                 },
-                {name: 'user', index: '用户名', width: 120, editable: true, sorttype: "text"},
-                {name: 'role', index: '用户角色', width: 80, editable: false, sorttype: "text"},
+                {name: 'user', index: 'user', width: 120, editable: true},
+                {name: 'role', index: 'role', width: 80, editable: false, formatter: highlight},
                 {
-                    name: 'time',
-                    index: '登录时间',
-                    width: 80,
+                    name: 'date',
+                    index: 'date',
+                    width: 150,
                     datefmt: "MMMM Do YYYY, h:mm:ss a",
                     editable: false,
                     sorttype: "date"
                 },
-                {name: 'result.msg', index: '操作', width: 120, editable: true, sorttype: "text"},
-                {name: 'IP', index: '用户IP', width: 120, editable: true, sorttype: "text"},
-                {name: 'hostname', index: 'PC名称', width: 120, editable: true, sorttype: "text"},
-                {name: 'ua', index: '浏览器', width: 120, editable: true, sorttype: "text"},
+                {name: 'result.msg', index: 'result.msg', width: 100, editable: true},
+                {name: 'IP', index: 'IP', width: 100, editable: true},
+                {name: 'ua.browser.name', index: 'ua.browser.name', width: 100, editable: true},
+                {name: 'ua.browser.version', index: 'ua.browser.version', width: 100, editable: true},
+                {name: 'ua.engine.name', index: 'ua.engine.name', width: 100, editable: true},
+                {name: 'ua.os.name', index: 'ua.os.name', width: 100, editable: true}
             ],
 
             viewrecords: true,
             rowNum: 20,
-            rowList: [10, 20, 30],
+            rowList: [20, 50, 100],
             pager: pager_selector,
+            emptyrecords: "Nothing to display",
+            sortname : 'date',
+            sortorder: 'desc',
             altRows: true,
             //toppager: true,
 
-            multiselect: true,
+            multiselect: false,
             //multikey: "ctrlKey",
             multiboxonly: true,
 
@@ -409,14 +417,13 @@
                 var table = this;
                 setTimeout(function () {
                     styleCheckbox(table);
-
                     updateActionIcons(table);
                     updatePagerIcons(table);
                     enableTooltips(table);
                 }, 0);
             },
 
-            editurl: "/admin/role/updateRole",
+            editurl: "",
             caption: "",
             reloadAfterSubmit: true,
             checkOnSubmit: true
@@ -438,36 +445,6 @@
 
         });
         $(window).triggerHandler('resize.jqGrid');//trigger window resize to make the grid get the correct size
-
-
-        fetchGridData();
-
-        function fetchGridData() {
-
-            var gridArrayData = [];
-            // show loading message
-            $("#grid-table")[0].grid.beginReq();
-            $.ajax({
-                url: "/admin/log/login/getAllRecords",
-                type: "POST",
-                success: function (result) {
-
-                    for(var i=0;i<result.length;i++) {
-                        result[i] = eval('(' + result[i] + ')')
-                    }
-
-
-
-                    console.log(result)
-                    // set the new data
-                    $("#grid-table").jqGrid('setGridParam', {data: result});
-                    // hide the show message
-                    $("#grid-table")[0].grid.endReq();
-                    // refresh the grid
-                    $("#grid-table").trigger('reloadGrid');
-                }
-            });
-        }
 
 
         //enable search/filter toolbar
@@ -717,7 +694,7 @@
 
         //延时执行， 等待Dom先生成
         setTimeout(function () {
-            $(".J_del").on("click",J_del);
+            $(".J_del").on("click", J_del);
         }, 20);
 
         function J_del(event) {
@@ -726,14 +703,14 @@
 
             $('#formInfoBox').modal();
 
-            $("#btnDel").on("click", function() {
+            $("#btnDel").on("click", function () {
                 //点击确认按钮开始删除用户
                 WhetherToDelete = true;
                 $('#formInfoBox').modal('hide')
             });
             $('#formInfoBox').on('hidden.bs.modal', function (e) {
                 //确认删除
-                if(WhetherToDelete) {
+                if (WhetherToDelete) {
                     $.ajax({
                         //提交数据的类型 POST GET
                         type: "POST",
@@ -760,13 +737,13 @@
                                 id: "Only-one-message"
                             });
                         },
-                        complete: function(e) {
+                        complete: function (e) {
                             //先清除， 再重新加载数据！
                             $("#grid-table").jqGrid("clearGridData");
                             fetchGridData();
-                            setTimeout(function(){
-                                $(".J_del").on("click",J_del);
-                            },20)
+                            setTimeout(function () {
+                                $(".J_del").on("click", J_del);
+                            }, 20)
                         },
                         //调用出错执行的函数
                         error: function (e) {
