--- a/app/server/views/admin/role.html
+++ b/app/server/views/admin/role.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -60,7 +60,7 @@
         }
     </script>
 
-    <div id="sidebar" class="sidebar      h-sidebar                navbar-collapse collapse          ace-save-state">
+    <div id="sidebar" class="sidebar h-sidebar navbar-collapse collapse ace-save-state">
         <script type="text/javascript">
             try {
                 ace.settings.loadState('sidebar')
@@ -117,9 +117,7 @@
 
             <li class="active open hover">
                 <a href="/admin/role">
-                    <i class="menu-icon fa fa-tag"></i>
-
-
+                    <i class="menu-icon fa fa-unlock-alt"></i>
                     <span class="menu-text"> 角色管理 </span>
                 </a>
                 <b class="arrow"></b>
@@ -226,7 +224,8 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">删除用户</h4>
             </div>
             <div class="modal-body">是否要删除该用户？</div>
@@ -364,7 +363,7 @@
                     index: '_id',
                     width: 80,
                     sorttype: "text",
-                    hidden: true,
+                    hidden: false,
                     editable: false,
                     editrules: {edithidden: true},
                     key: true
@@ -711,8 +710,8 @@
         });
 
         //延时执行， 等待Dom先生成
-        setTimeout(function () {
-            $(".J_del").on("click",J_del);
+        setInterval(function () {
+            $(".J_del").on("click", J_del);
         }, 20);
 
         function J_del(event) {
@@ -721,14 +720,14 @@
 
             $('#formInfoBox').modal();
 
-            $("#btnDel").on("click", function() {
+            $("#btnDel").on("click", function () {
                 //点击确认按钮开始删除用户
                 WhetherToDelete = true;
                 $('#formInfoBox').modal('hide')
             });
             $('#formInfoBox').on('hidden.bs.modal', function (e) {
                 //确认删除
-                if(WhetherToDelete) {
+                if (WhetherToDelete) {
                     $.ajax({
                         //提交数据的类型 POST GET
                         type: "POST",
@@ -755,13 +754,13 @@
                                 id: "Only-one-message"
                             });
                         },
-                        complete: function(e) {
+                        complete: function (e) {
                             //先清除， 再重新加载数据！
                             $("#grid-table").jqGrid("clearGridData");
                             fetchGridData();
-                            setTimeout(function(){
-                                $(".J_del").on("click",J_del);
-                            },20)
+                            setTimeout(function () {
+                                $(".J_del").on("click", J_del);
+                            }, 20)
                         },
                         //调用出错执行的函数
                         error: function (e) {
