--- a/app/server/views/admin/user.html
+++ b/app/server/views/admin/user.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -117,7 +117,7 @@
 
             <li class="hover">
                 <a href="/admin/role">
-                    <i class="menu-icon fa fa-tag"></i>
+                    <i class="menu-icon fa fa-unlock-alt"></i>
 
 
                     <span class="menu-text"> 角色管理 </span>
@@ -336,15 +336,13 @@
 
 
         function highlight(cellvalue, options, rowObject) {
-
             var temp = "";
-
             if (cellvalue == "超级管理员") {
                 temp = '<span class="label label-sm label-danger">' + cellvalue + '</span>';
             } else if (cellvalue == "系统管理员") {
                 temp = '<span class="label label-sm label-warning">' + cellvalue + '</span>';
             } else {
-                temp = '<span class="label label-sm label-success">' + cellvalue + '</span>';
+                temp = '<span class="label label-sm label-info">' + cellvalue + '</span>';
             }
 
             return temp
@@ -368,7 +366,7 @@
                     index: '_id',
                     width: 80,
                     sorttype: "text",
-                    hidden: true,
+                    hidden: false,
                     editable: true,
                     editrules: {edithidden: true},
                     key: true
@@ -726,7 +724,7 @@
         var msg = null;//删除列表项目右下角提示信息
 
         //延时执行， 等待Dom先生成
-        setTimeout(function () {
+        setInterval(function () {
             $(".J_del").on("click",J_del);
         }, 20);
 
