--- a/app/server/views/application/index.html
+++ b/app/server/views/application/index.html
@@ -50,7 +50,7 @@
     <![endif]-->
 </head>
 
-<body class="no-skin">
+<body class="skin-hn">
 <% include ../includes/topNav.html %>
 
 <div class="main-container ace-save-state" id="main-container">
